--- a/app/javascript/pinnable_sliding_sidebar/styles/pinnable_sliding_sidebar.scss
+++ b/app/javascript/pinnable_sliding_sidebar/styles/pinnable_sliding_sidebar.scss
@@ -2,13 +2,14 @@
 
 html {background: #222;}
 
+
 .sidebar {
   width: 250px;
   height: 100%;
   background: #111;
   padding: 30px;
-  //position: absolute;
-  //float: left;
+  position: absolute;
+  float: left;
   transform: translate(-100%);
   transition: transform .2s linear;
   //box-shadow: 3px 0 5px rgba(0, 0, 0, .5);
@@ -58,11 +59,17 @@ img {
   padding-top: 56px;
 }
 .main-content {
-  width: 100%;
+  width: calc(100% - 25px);
   height: 100%;
   padding: 30px;
-  //float: right;
+  float: right;
   //transform: translate(-100%);
-  transition: transform .2s linear;
-
+  //transition: transform .2s linear;
 }
+
+.sidebar:hover ~ .main-content,
+.sidebarpin ~ .main-content
+{
+  width: calc(100% - 250px);
+}
+
