--- a/app/javascript/pinnable_sliding_sidebar/styles/pinnable_sliding_sidebar.scss
+++ b/app/javascript/pinnable_sliding_sidebar/styles/pinnable_sliding_sidebar.scss
@@ -2,7 +2,6 @@
 
 html {background: #222;}
 
-
 .sidebar {
   width: 250px;
   height: 100%;
@@ -12,7 +11,6 @@ html {background: #222;}
   float: left;
   transform: translate(-100%);
   transition: transform .2s linear;
-  //box-shadow: 3px 0 5px rgba(0, 0, 0, .5);
 }
 
 .sidebar:hover {transform: translate(0);}
@@ -34,7 +32,6 @@ html {background: #222;}
   position: absolute;
   right: -25px;
   top: 0;
-  //box-shadow: 3px 0 5px rgba(0, 0, 0, .5);
   transition: opacity .2s linear;
 }
 
@@ -54,7 +51,6 @@ img {
   transform: translateY(-50%);  /* not sure if necessary */
 }
 
-
 .body-content {
   padding-top: 56px;
 }
@@ -63,13 +59,13 @@ img {
   height: 100%;
   padding: 30px;
   float: right;
-  //transform: translate(-100%);
-  //transition: transform .2s linear;
+  transition: width .2s linear;
 }
 
 .sidebar:hover ~ .main-content,
 .sidebarpin ~ .main-content
 {
   width: calc(100% - 250px);
+  transition: width .2s linear;
 }
 
